--- a/style.css
+++ b/style.css
@@ -50,21 +50,56 @@ canvas{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-end;  
-    height: 100vh;
+    height: 90vh;
 }
 
 .box {
-    width: calc(47% - 10px);
     height: 100%;
     margin-bottom: 10px;
     border-radius: 10px 10px 10px 10px;
 }
 
 .right{
-    
+    width: 400px;
     background-color: #FFFFFF;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
 }
+
+
+.options{
+    border-radius: 10px;
+    display: flex;
+    width: 100%;
+    padding: 5px;
+}
+
+.button {
+    display: inline-block;
+    color: #fff;
+    padding: 17px 17px;
+    margin: 0px 2px;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 100%;
+    
+}
+
+#Generate{
+    background-color: #343a40;
+}
+
+#Generate:hover{
+    background-color: #495057;
+}
+
+#Download{
+    background-color: #343a40;
+}
+
+#Download:hover{
+    background-color: #495057;
+}
+
 
 .content {
     margin: 20px 20px 20px 20px;
@@ -73,19 +108,5 @@ canvas{
 .left{
     background-color: #FFFFFF;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
-}
-
-.options{
-    padding: 10px 0px 10px 0px;
-    margin: 30px 30px 30px 30px;
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
-    display: flex;
-    justify-content: center;
-}
-
-.options > button{
-    margin: 0px 5px 0px 5px;
-    padding: 10px 10px 10px 10px;
 }
 
