--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ canvas{
     margin: 30px 30px 0px 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-end;  
     height: 90vh;
 }
@@ -60,11 +60,12 @@ canvas{
 }
 
 .right{
+    margin-left: 20px;
     width: 400px;
     background-color: #FFFFFF;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
+    transition: all 2s linear;
 }
-
 
 .options{
     border-radius: 10px;
@@ -78,8 +79,6 @@ canvas{
     color: #fff;
     padding: 17px 17px;
     margin: 0px 2px;
-    text-decoration: none;
-    text-align: center;
     border-radius: 100%;
     
 }
@@ -109,4 +108,28 @@ canvas{
     background-color: #FFFFFF;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
 }
+
+/* side bar */
+
+.view_btn{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 17px 17px;
+    margin: 0px 2px;
+    border-radius: 100%;
+    background-color: #FFF;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
+
+}
+
+.view_btn:hover{
+    background-color: rgb(235, 235, 235);
+}
+
+.view_btn:active{
+    background-color: rgb(221, 221, 221);
+}
+
+
 
