--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 }
 
 canvas{
-    background-color: var(--white1_color);
+    background-color: #FFFFFF;
     border-radius: 10px 10px 10px 10px;
     width: 100%;
     height: 100%;
@@ -49,7 +49,6 @@ canvas{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: flex-end;  
     height: 90vh;
 }
 
@@ -91,6 +90,10 @@ canvas{
     background-color: #495057;
 }
 
+#Generate:active{
+    background-color: #34393e;
+}
+
 #Download{
     background-color: #343a40;
 }
@@ -99,6 +102,24 @@ canvas{
     background-color: #495057;
 }
 
+#Download:active{
+    background-color: #34393e;
+}
+
+.menu{
+    background-color: #FFFFFF;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
+    border-radius: 10px 10px 10px 10px;
+    height: fit-content;
+    padding: 5px 5px;
+    margin: 0px 10px;
+    display: none;
+}
+
+.menu > .button{
+    display: block;
+    margin-bottom: 5px;
+}
 
 .content {
     margin: 20px 20px 20px 20px;
