--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ body{
 
 canvas{
     background-color: #FFFFFF;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 0px 0px 10px;
     width: 100%;
     height: 100%;
+    
 }
 
 .container{
@@ -59,11 +60,13 @@ canvas{
 }
 
 .right{
-    margin-left: 20px;
     width: 400px;
     background-color: #FFFFFF;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
     transition: all 2s linear;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    
 }
 
 .options{
@@ -79,30 +82,14 @@ canvas{
     padding: 17px 17px;
     margin: 0px 2px;
     border-radius: 100%;
+    background-color: #343a40;
+}
     
-}
-
-#Generate{
-    background-color: #343a40;
-}
-
-#Generate:hover{
+.button:hover{
     background-color: #495057;
 }
 
-#Generate:active{
-    background-color: #34393e;
-}
-
-#Download{
-    background-color: #343a40;
-}
-
-#Download:hover{
-    background-color: #495057;
-}
-
-#Download:active{
+.button:active{
     background-color: #34393e;
 }
 
@@ -122,12 +109,86 @@ canvas{
 }
 
 .content {
-    margin: 20px 20px 20px 20px;
+    margin: 10px 20px;
+}
+
+/* content h1 */
+h1 {
+    padding: 10px 0px;
+}
+
+/* content h2*/
+h2 {
+    padding: 10px 5px;
+}
+
+
+/* content select */
+.custom-select {
+    position: relative;
+    width: 150px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
+}
+
+.custom-select select {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-size: 16px;
+    color: #333;
+}
+
+.custom-select::after {
+    content: "\f078";
+    font-family: FontAwesome;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    font-size: 14px;
+    color: #666;
+    pointer-events: none;
+}
+
+.custom-select select:focus +::after {
+    color: #333;
+}
+
+.custom-select select::-ms-expand {
+    display: none;
+}
+
+.custom-select select::-webkit-scrollbar {
+    display: none;
+}
+    
+
+
+select{
+    appearance: none;
+    background-color: transparent;
+    border: none;
+    padding: 0 1em 0 0;
+    margin: 0;
+    width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: inherit;
+    line-height: inherit;
 }
 
 .left{
     background-color: #FFFFFF;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.262);
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 /* side bar */
@@ -151,6 +212,7 @@ canvas{
 .view_btn:active{
     background-color: rgb(221, 221, 221);
 }
+
 
 
 
